# spacebar-client-rs

./: .gitignore  README.md
.github/workflows/: tauri.yml
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: base.json
src-tauri/core/: Cargo.toml  build.rs
src-tauri/core/src/: go_support.rs  lib.rs
src-tauri/core/src/controllers/: banners.rs  modals.rs
src-tauri/core/src/net/: gateway.rs  mod.rs  rest.rs
src-tauri/core/src/stores/: account_store.rs  app_store.rs  experiments_store.rs  gateway_connection_store.rs  guild_member_list_store.rs  guild_member_store.rs  guild_store.rs  mod.rs  private_channel_store.rs  store.rs  user_store.rs
src-tauri/core/src/stores/objects/: channel.rs  guild.rs  mod.rs  queued_message.rs  user.rs
src-tauri/core/src/utils/: emoji.rs  mod.rs  snowflake.rs
src-tauri/core/tests/: go_tests.rs  net_tests.rs
src-tauri/go/: bridge.go  go.mod
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/controllers/: banners.rs  mod.rs  modals.rs
src-tauri/src/net/: gateway.rs  mod.rs  rest.rs
src-tauri/src/stores/: channel_store.rs  emoji_store.rs  message_queue.rs  message_store.rs  presence_store.rs  read_state_store.rs  role_store.rs  store.rs  theme_store.rs  updater_store.rs
src-tauri/src/stores/objects/: emoji.rs  guild_member.rs  message.rs  message_base.rs  presence.rs  read_state.rs  role.rs
src-tauri/src/ui/: app.rs  mod.rs
src-tauri/src/utils/: bitfield.rs  emoji.rs  mod.rs
(+24 files in other folders)
